--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
 /* Main Page */
 #back-splash{
   position: relative;
-  background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,0.1)), url('images/beach1.jpg'); /*Linear gradient, CSS3 */
+  background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,0.1)), url('../images/beach1.jpg'); /*Linear gradient, CSS3 */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; 
@@ -266,16 +266,16 @@ section.section.parallax h3 {
 }
 
 section.section.parallax-1 {
-  background-image: url("images/sunset2.jpg");
+  background-image: url("../images/sunset2.jpg");
 }
 section.section.parallax-2 {
-  background-image: url("images/beach2.jpg");
+  background-image: url("../images/beach2.jpg");
 }
 section.section.parallax-3 {
-  background-image: url("images/land1.jpg");
+  background-image: url("../images/land1.jpg");
 }
 section.section.parallax-4 {
-  background-image: url("images/tree1.jpg");
+  background-image: url("../images/tree1.jpg");
 }
 
 /*Gallery selector */
@@ -314,22 +314,22 @@ a.btn.center-block{
   opacity: 0.7;
 }
 #theme-1{
-  background: url('images/sunset2.jpg') no-repeat;
+  background: url('../images/sunset2.jpg') no-repeat;
   background-size: cover;
   background-position: center;
 }
 #theme-2{
-  background: url('images/beach2.jpg') no-repeat;
+  background: url('../images/beach2.jpg') no-repeat;
   background-size: cover;
   background-position: center;
 }
 #theme-3{
-  background: url('images/land1.jpg') no-repeat;
+  background: url('../images/land1.jpg') no-repeat;
   background-size: cover;
   background-position: center;
 }
 #theme-4{
-  background: url('images/tree1.jpg') no-repeat;
+  background: url('../images/tree1.jpg') no-repeat;
   background-size: cover;
   background-position: center;
 }
